Replaced instruments_types with instrument_types
